--- a/css/styles.css
+++ b/css/styles.css
@@ -129,14 +129,17 @@ body {
 	}
 		#tweet-controls {
 			text-align: right;
+			visibility: hidden;
 		}
 			#tweet-controls div {
 				display: inline-block;
+
 			}
 			#char-count {
 				font-size: 14px;
 				color: #999;
 				text-shadow: 0 1px 1px rgba(255,255,255,.75);
+				visibility: hidden;
 			}
 
 /* TWEET */
@@ -258,5 +261,3 @@ body {
 				top: 0;
 				left: 0;
 			}
-
-
